--- a/01 - Ejercicos - Bases de R.Rmd
+++ b/01 - Ejercicos - Bases de R.Rmd
@@ -5,103 +5,461 @@ output:
     toc: true
 ---
 
-# Estudiante: SuNombre
+```{r}
+library("tidyverse")
+library("lubridate")
+library("ggplot2")
+```
 
-Para realizar estos ejercicios use como referencia el documento "01 - Bases de R.Rmd".
-
-Resuelva estos ejercicios en este documento insertando los chuncks necesarios (cntrl + alt + i), luego de cada consigna. Agregue al nombre del archivo el suyo al final (01 - Ejercicios - Bases de R - SuNombre Apellido.Rmd), y me lo envía por email.
-
-Cargue las librerías necesaria cuando las necesite, no lo haga al inicio de la actividad. Esto no es el modo habitual de trabajo, pero se pretende aquí que usted descubra cuándo necesita las librerías extra.
+# Estudiante: Benjamin Zapata
 
 # Tipos de datos (Numeric, character , logical, y varios tipos para fechas y tiempos)
 
 ## Numeric
 
 -   Cree objetos de la clase numeric y verifique con class() y typeof().
--   Averigüe cómo crear un objeto de la case integer.
+```{r}
+numero <- 18
+class(numero)
+typeof(numero)
+```
+-   Averigüe cómo crear un objeto de la clase integer.
+```{r}
+numero <- as.integer(18)
+```
 -   ¿Qué son los objetos pi y exp(1)?
+```{r}
+# Son datos numéricos del tipo double
+class(pi)
+class(exp(1))
+typeof(pi)
+typeof(exp(1))
+```
+
 
 ## Character
 
 -   Cree tres objetos de texto y concaténelos de 3 maneras diferentes. Use los siguientes separadores: un espacio, un guión y sin espacio. Pruebe las funciones paste() y print(). ¿Qué las diferencia?
+```{r}
+uno <- "Hola"
+dos <- "como"
+tres <- "estas?"
+
+paste(uno, dos, tres, sep = " ")
+paste(uno, dos, tres, sep = "-")
+paste(uno, dos, tres, sep = "")
+print(c(uno, dos, tres))
+
+# Paste permite ingresar varios parámetros y los concatena en un mensaje final.
+# Print recibe un vector de elementos y los muestra individualmente, sin concatenarlos
+```
 
 ## Logical
 
 -   Cree las tablas de verdad para los conectores lógicos "y" y "o" y considere también las combinaciones de la negación de las proposiciones. Ponga atención en el orden de ejecución.
+```{r}
+verdadero <- TRUE
+falso <- FALSE
+
+print("Conector lógico AND")
+print(falso && falso)
+print(falso && verdadero)
+print(verdadero && falso)
+print(verdadero && verdadero)
+
+print("Conector lógico OR")
+print(falso || falso)
+print(falso || verdadero)
+print(verdadero || falso)
+print(verdadero || verdadero)
+```
 
 ## Date and Time.
 
 -   ¿Qué día Juliano es su cumpleaños?
+```{r}
+miCumpleaños <- as.Date("2024-06-18")
+paste("Este año sera el dia", yday(miCumpleaños), "(año bisiesto)")
+```
+
 -   ¿Cuántos días hay entre su último cumpleaños y hoy?
+```{r}
+fechaActual <- as.Date("2024-05-03")
+miUltimoCumpleaños <- as.Date("2023-06-18")
+paste("La diferencia entre mi ultimo cumpleaños y el dia de hoy es de", fechaActual - miUltimoCumpleaños, "dias")
+```
+
 -   ¿Cuántos días faltan para su próximo cumpleaños?
+```{r}
+fechaActual <- yday(now())
+paste("La diferencia entre mi proximo cumpleaños y el dia de hoy es de", yday(miCumpleaños) - fechaActual, "dias")
+```
+
 -   ¿Cuánto tiempo ha transcurrido desde su nacimiento?
+```{r}
+fechaNacimiento <- as.Date("1998-06-18")
+fechaActual <- as.Date("2024-05-03")
+miEdadEnDias <- fechaActual - fechaNacimiento
+paste("Han pasado", miEdadEnDias, "dias desde mi nacimiento")
+```
+
 -   ¿Cuánto tiempo vivió El Diego?
+```{r}
+fechaNacimientoDiego <- as.Date("1960-10-30")
+fechaFallecimientoDiego <- as.Date("2020-11-26")
+edadDiegoEnDias <- fechaFallecimientoDiego - fechaNacimientoDiego
+paste("Diego Maradona vivio", edadDiegoEnDias, "dias")
+```
+
 -   ¿Qué día de la semana nació El Diego?
+```{r}
+paste("Nacio el dia", wday(fechaNacimientoDiego), "de la semana")
+```
+
 -   ¿Qué semana del año murió El Diego?
+```{r}
+paste("Murio en la semana", week(fechaFallecimientoDiego), "de la semana")
+```
+
 -   ¿Qué diferencia de edad tienen usted y El Diego?
+```{r}
+paste("La diferencia de edad es de", edadDiegoEnDias - miEdadEnDias, "dias")
+```
 
 # Estructuras de datos
 
 ## Vectores
 
 -   Cree un vector con los días julianos correspondientes a 50, 100, 150, 200, 250, 300 y 350 días después de su último cumpleaños.
--   Cree un vector con los días de la semana (como palabras) corerspondientes a las fechas del inciso anterior.
+```{r}
+miUltimoCumpleañosJuliano <- yday(miUltimoCumpleaños)
+vectorJuliano <- c(1:7)
+for(n in vectorJuliano) {
+  numero <- miUltimoCumpleañosJuliano + (50 * n)
+  if (numero > 365) {
+    numero <- numero - 365
+    vectorJuliano[n] <- numero
+  } else vectorJuliano[n] <- numero
+}
+print(vectorJuliano)
+```
+-   Cree un vector con los días de la semana (como palabras) correspondientes a las fechas del inciso anterior.
+```{r}
+diasDeLaSemana <- c("Domingo", "Lunes", "Martes", "Miercoles", "Jueves", "Viernes", "Sabado")
+vectorJulianoDias <- c(1:7)
+diaDeLaSemana <- wday(miUltimoCumpleaños)
+for (n in vectorJulianoDias) {
+  diaDeLaSemana <- (50 * n) + 1
+  while(diaDeLaSemana > 7) {
+    diaDeLaSemana <- diaDeLaSemana - 7
+  }
+  vectorJulianoDias[n] <- diasDeLaSemana[diaDeLaSemana]
+}
+print(vectorJulianoDias)
+```
 -   Cree un vector con las superficies correspondientes a 5 cuadrados. El primer cuadrado tiene lados de 1m de largo, el segundo tiene lados el doble de largos que el cuadrado anterior, el tercero el triple del cuadrado del doble del inicial... y así sigue la serie. (es decir: 1, 2 * 1, 3 * 2 * 1, ...)
+```{r}
+vectorSuperficieCuadrados <- c(1:5)
+for(n in vectorSuperficieCuadrados) {
+  contador <- 1
+  superficieCuadrado <- 1
+  while(contador != n + 1) {
+    superficieCuadrado <- superficieCuadrado * contador
+    contador <- contador + 1
+  }
+  vectorSuperficieCuadrados[n] <- superficieCuadrado
+}
+print(vectorSuperficieCuadrados)
+```
+
 -   Cree un vector con los precios de 6 productos y otro con las cantidades vendidas de dichos productos. ¿Cuánto fué el ingreso total de las ventas?
+```{r}
+vectorPrecioProductos = c(10, 15, 30, 50, 80, 100)
+vectorCantidadVendidas = c(10, 5, 7, 3, 6, 1)
+ingresoTotal <- 0
+for (i in 1:6) {
+  ingresoTotal <- ingresoTotal + (vectorPrecioProductos[i] * vectorCantidadVendidas[i])
+}
+paste("Se vendio un total de $", ingresoTotal, "pesos")
+```
 
 ### Generador de secuencias
 
 -   Cree un vector de números del 21 al 354
+```{r}
+vectorSecuencia <- seq(21, 354)
+print(vectorSecuencia)
+```
+
 -   Cree un vector con una secuencia desde 0 hasta 700 saltando de a 7 usando la función seq()
+```{r}
+vectorSecuencia <- seq(0, 700, 7)
+print(vectorSecuencia)
+```
+
 -   Cree el mismo vector anterior pero sin usar el método seq()
+```{r}
+vectorSecuencia <- c(0:100)
+for(n in vectorSecuencia) {
+  vectorSecuencia[n + 1] <- n * 7
+}
+print(vectorSecuencia)
+```
 
 ### Acceder a los elementos de un vector
 
 -   ¿Cuál es la superficie del tercer cuadrado del ejercicio anterior?
+```{r}
+vectorSuperficieCuadrados[3]
+```
+
 -   ¿Cuáles son los números desde el 5to al 9no de la serie que salta de a siete?
+```{r}
+for(n in 5:9) {
+  print(vectorSecuencia[n])
+}
+```
+
 -   Cree un vector que contenga las fechas correspondientes a los 100, 200 y 300 días posteriores a su último cumpleaños. No lo vuelva a calcular, rescate los valores del vector previamente creado.
+```{r}
+vectorFechasDias <- c(1:3)
+for(n in vectorFechasDias) {
+  vectorFechasDias[n] <- vectorJuliano[n * 2]
+}
+print(vectorFechasDias)
+```
 
 ## Matrices
 
 Usted es un comerciante que vende 7 productos en 3 sucursales diferentes.
 
 -   Cree un vector con los precios de compra mayorista de los 7 productos que luego venderá.
+```{r}
+vectorPrecioCompraMayorista <- c(sample(10:50, 21, replace = FALSE))
+matrizPrecioCompra <- matrix(vectorPrecioCompraMayorista, nrow = 3, ncol = 7, byrow = TRUE)
+print(matrizPrecioCompra)
+```
+
 -   Cree una matriz con los precios de venta de los 7 productos en las 3 sucursales diferentes.
+```{r}
+matrizPrecioVenta <- matrix(matrizPrecioCompra * 1.8, nrow = 3, ncol = 7)
+print(matrizPrecioVenta)
+```
+
 -   Cree una matriz con las ventas realizadas de los 7 productos anteriores en las 3 sucursales mencionadas.
+```{r}
+vectorVentasMayorista <- c(sample(0:30, 21, replace = FALSE))
+matrizVentas <- matrix(vectorVentasMayorista, nrow = 3, ncol = 7, byrow = TRUE)
+print(matrizVentas)
+```
+
 -   Cree una matriz, usando las anteriores, con la recaudación por producto y sucursal.
+```{r}
+matrizRecaudacionMayorista <- matrizPrecioVenta * matrizVentas
+print(matrizRecaudacionMayorista)
+```
+
 -   Cree una matriz , usando las anteriores, con las ganancias por producto y por sucursal.
+```{r}
+matrizGananciaMayorista <- matrizRecaudacionMayorista - (matrizPrecioCompra * matrizVentas)
+print(matrizGananciaMayorista)
+```
 
 ### Acceder a sus elementos
 
 Para las matrices del ejemplo anterior:
 
 -   ¿Cuál fué la recaudación total?, ¿y la ganancia?
+```{r}
+recaudacion <- 0
+ganancia <- 0
+for (n in 1:21) {
+  ganancia <- ganancia + matrizGananciaMayorista[n]
+  recaudacion <- recaudacion + matrizRecaudacionMayorista[n]
+}
+paste("La ganancia total fue de: $", ganancia)
+paste("La recaudacion total fue de: $", recaudacion)
+```
+
 -   ¿Cuál fué la recaudación en la sucursal 2?, ¿y la ganancia?
+```{r}
+recaudacionSucursal2 <- 0
+gananciaSucursal2 <- 0
+for (n in 1:7) {
+  gananciaSucursal2 <- gananciaSucursal2 + matrizGananciaMayorista[2, n]
+  recaudacionSucursal2 <- recaudacionSucursal2 + matrizRecaudacionMayorista[2, n]
+}
+paste("La ganancia total fue de: $", gananciaSucursal2)
+paste("La recaudacion total fue de: $", recaudacionSucursal2)
+```
+
 -   ¿Cuál fué la recaudación del producto 6?, ¿y la ganancia?
+```{r}
+recaudacionProducto6 <- 0
+gananciaProducto6 <- 0
+for (n in 1:3) {
+  gananciaProducto6 <- gananciaProducto6 + matrizGananciaMayorista[n, 6]
+  recaudacionProducto6 <- recaudacionProducto6 + matrizRecaudacionMayorista[n, 6]
+}
+paste("La ganancia total fue de: $", gananciaProducto6)
+paste("La recaudacion total fue de: $", recaudacionProducto6)
+```
 
 ## Array.
 
 -   Imagine una inflación mensual del 13% y construya un array con la información del ejercicio anterior agregándole toda esa misma información pero en el mes siguiente.
+```{r}
+matrizGananciaMayoristaInflacion <- matrizGananciaMayorista * 1.13
+matrizRecaudacionMayoristaInflacion <- matrizRecaudacionMayorista * 1.13
+arrayMayorista <- array(c(matrizRecaudacionMayorista, matrizGananciaMayorista, matrizRecaudacionMayoristaInflacion, matrizGananciaMayoristaInflacion), dim = c(3,7,4))
+arrayMayorista <- provideDimnames(arrayMayorista, sep = "_", base = list("Sucursal", "Producto", c("Recaudacion normal", "Ganancia normal", "13% recaudacion", "13% ganancia")))
+print(arrayMayorista)
+```
 
 ### Acceder a sus elementos
 
 -   ¿Cuál fué la recaudación total y la ganancia en el mes siguiente?
+```{r}
+gananciasInflacion <- 0
+recaudacionInflacion <- 0
+for (n in 1:3) {
+  for (i in 1:7) {
+    recaudacionInflacion <- recaudacionInflacion + arrayMayoristaInflacion[n, i, 3]
+    gananciasInflacion <- gananciasInflacion + arrayMayoristaInflacion[n, i, 4]
+  }
+}
+paste("La recaudacion fue de $", recaudacionInflacion)
+paste("La ganancia fue de $", gananciasInflacion)
+```
+
 -   ¿Cuál fué la recaudación y la ganancia en la sucursal 3 en el primer mes?
+```{r}
+gananciasSucursal3 <- 0
+recaudacionSucursal3 <- 0
+for (n in 1:3) {
+  for (i in 1:7) {
+    recaudacionSucursal3 <- recaudacionSucursal3 + arrayMayoristaInflacion[n, i, 1]
+    gananciasSucursal3 <- gananciasSucursal3 + arrayMayoristaInflacion[n, i, 2]
+  }
+}
+paste("La recaudacion de la sucursal 3 fue de $", recaudacionSucursal3)
+paste("La ganancia de la sucursal 3 fue de $", gananciasSucursal3)
+```
+
 -   ¿Cuál fué la recaudación y la ganancia del producto 2 en los dos meses?
+```{r}
+gananciasProducto2 <- 0
+recaudacionProducto2 <- 0
+for (n in 1:3) {
+  for (i in 2) {
+    for (k in c(0,2)) {
+      recaudacionProducto2 <- recaudacionProducto2 + arrayMayoristaInflacion[n, i, 1 + k]
+      gananciasProducto2 <- gananciasProducto2 + arrayMayoristaInflacion[n, i, 2 + k]
+    }
+  }
+}
+paste("La recaudacion del producto 2 fue de $", recaudacionProducto2)
+paste("La ganancia del producto 2 fue de $", gananciasProducto2)
+```
 
 ## Estructuras de datos heterogéneos
 
 ## Listas
 
 -   Cree una lista con nombres de sus elementos donde almacene precio de compra, precio de venta, ventas, recaudación y ganancias de los productos 3 y 5 en el segundo mes.
+```{r}
+lista <- list(precioCompra = matrix(c(matrizPrecioCompra[, 3] * 1.13, matrizPrecioCompra[, 5] * 1.13), nrow = 3, ncol = 2),
+              precioVenta = matrix(c(matrizPrecioVenta[, 3] * 1.13, matrizPrecioVenta[, 5] * 1.13), nrow = 3, ncol = 2),
+              ventas = matrix(c(matrizVentas[, 3], matrizVentas[, 5]), nrow = 3, ncol = 2),
+              recaudacion = matrix(c(matrizRecaudacionMayoristaInflacion[, 3], matrizRecaudacionMayoristaInflacion[, 5]), nrow = 3, ncol = 2),
+              ganancias = matrix(c(matrizGananciaMayoristaInflacion[, 3], matrizGananciaMayoristaInflacion[, 5]), nrow = 3, ncol = 2))
+print(lista)
+```
 
 ### Acceder a sus elementos
 
 -   ¿Cuales fueron las ventas del producto 3? (obtenga la información de la lista anterior)
+```{r}
+ventasProducto3 <- 0
+for (n in lista$ventas[,1]) {
+  ventasProducto3 <- ventasProducto3 + n
+}
+paste("Las ventas del producto 3 fueron", ventasProducto3)
+```
 
 # Funciones
 
 -   Cree una función que le permita acceder a las ganancias totales del producto que usted elija.
--   Cree una función que le permita acceder a las ganancias totales de ls sucursal que usted elija.
+```{r}
+obtenerGananciasProducto <- function(prod) {
+  if (class(prod) != "numeric" || prod < 1 || prod > 7) {
+    return("Ingrese un numero de producto entre 1 y 7")
+  }
+  gananciaTotal <- 0
+  for (n in matrizGananciaMayorista[, prod]) {
+    gananciaTotal <- gananciaTotal + n
+  }
+  for (j in matrizGananciaMayoristaInflacion[, prod]) {
+    gananciaTotal <- gananciaTotal + j
+  }
+  return(paste("La ganancia total del producto", prod, "fue de $", gananciaTotal))
+}
+obtenerGananciasProducto(2)
+obtenerGananciasProducto(5)
+obtenerGananciasProducto(8)
+obtenerGananciasProducto("producto")
+```
+
+-   Cree una función que le permita acceder a las ganancias totales de las sucursal que usted elija.
+```{r}
+obtenerGananciasSucursal <- function(suc) {
+  if (class(suc) != "numeric" || suc < 1 || suc > 3) {
+    return("Ingrese un numero de sucursal entre 1 y 3")
+  }
+  gananciaTotal <- 0
+  for (n in matrizGananciaMayorista[suc, ]) {
+    gananciaTotal <- gananciaTotal + n
+  }
+  for (j in matrizGananciaMayoristaInflacion[suc, ]) {
+    gananciaTotal <- gananciaTotal + j
+  }
+  return(paste("La ganancia total de la sucursal", suc, "fue de $", gananciaTotal))
+}
+obtenerGananciasSucursal(2)
+obtenerGananciasSucursal(3)
+obtenerGananciasSucursal(5)
+obtenerGananciasSucursal("sucursal")
+```
+
 -   Cree una función que le permita acceder a las ganancias totales de un producto en una sucursal.
+```{r}
+obtenerGananciasProductoSucursal <- function(suc, prod){
+  if (class(prod) != "numeric" || prod < 1 || prod > 7) {
+    return("Ingrese un numero de producto entre 1 y 7")
+  }
+  if (class(suc) != "numeric" || suc < 1 || suc > 3) {
+    return("Ingrese un numero de sucursal entre 1 y 3")
+  }
+  gananciaTotal <- 0
+  for (n in matrizGananciaMayorista[suc, prod]) {
+    gananciaTotal <- gananciaTotal + n
+  }
+  for (j in matrizGananciaMayoristaInflacion[suc, prod]) {
+    gananciaTotal <- gananciaTotal + j
+  }
+  return(paste("La ganancia total del producto", prod, "de la sucursal", suc, "fue de $", gananciaTotal))
+}
+obtenerGananciasProductoSucursal(2, 2)
+obtenerGananciasProductoSucursal(3, 3)
+obtenerGananciasProductoSucursal(6, 5)
+obtenerGananciasProductoSucursal("sucursal", 4)
+```
+
 -   Guarde en un archivo externo las funciones creadas. Cárguelas luego y pruebe su funcionalidad. (Recomendación, a las funciones almacenadas aparte póngales un nombre diferente así puede probar si cargan correctamente sin conflicto con las creadas en este documento)
+```{r}
+source("./funciones/01 - Ejercicios - Funciones.R")
+obtenerGananciasProductoExterno(4)
+obtenerGananciasSucursalExterno(2)
+obtenerGananciasProductoSucursalExterno(3, 3)
+```
+
